--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
     </div>
 
     <script src="src/js/data.js"></script>
+    <script src="src/js/utils.js"></script>
     <script src="src/js/ecosystem.js"></script>
     <script src="src/js/settlement.js"></script>
     <script src="src/js/technology.js"></script>
