Fix testing framework for non-modular code
- Added global window.X exports to all class files
- Updated tests to properly access global objects
- Fixed specific test issues with mocking
- Made all 51 tests pass successfully

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 
     <script src="src/js/data.js"></script>
     <script src="src/js/utils.js"></script>
+    <script src="src/js/pathfinding.js"></script>
     <script src="src/js/ecosystem.js"></script>
     <script src="src/js/settlement.js"></script>
     <script src="src/js/technology.js"></script>
